--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 .header {
-    background-color: orangered;
+    background-color: rgb(255, 100, 0);
     height: 80px;
     color: white;
     display: flex;
@@ -29,21 +29,41 @@ body {
     padding: 25px 10px;
 }
 
-.headerListItem:hover {
-    background-color: rgb(255, 38, 0);
-
-}
-
 .main {
     min-height: 100px;
 }
 
+.deActive {
+    display: none;
+}
+
+.selected {
+    background-color: rgb(255, 30, 0);
+}
+
+.home {
+    font-size: large;
+}
+
+.menu {
+    font-size: large;
+
+}
+
+.contact {
+    font-size: large;
+
+}
+
 .footer {
-    background-color: orangered;
+    background-color: rgb(255, 102, 0);
     height: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
+    position: fixed;
+    width: 100%;
+    bottom: 0px;
 }
 
 .footerContent {
@@ -75,6 +95,10 @@ body {
 
     .headerListItem {
         padding: 20px 0px 20px 0px;
+    }
+
+    .selected {
+        border-radius: 20px;
     }
 
 }
