--- a/src/style.css
+++ b/src/style.css
@@ -50,9 +50,22 @@ body {
 }
 
 .home {
-    font-size: large;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    color: rgb(255, 102, 0);
+    font-size: 80px;
+    font-weight: 900;
 }
-
+.home button{
+    color: white;
+    background-color: rgb(255, 102, 0);
+    border: none;
+    border-radius: 15px;
+    width: 200px;
+    height: 50px;
+    font-size: 24px;
+}
 .menu {
 
     font-size: large;
@@ -64,7 +77,7 @@ body {
     width: 600px;
     height: 280px;
     border-radius: 20px;
-    border: solid 5px rgb(255, 102, 0);
+    /* border: solid 5px rgb(255, 102, 0); */
     color: rgb(255, 102, 0);
     flex-direction: column;
     justify-content: center;
@@ -121,6 +134,10 @@ body {
         border-radius: 20px;
     }
 
+    .home {
+        width: 250px;
+        font-size: 30px;
+    }
     .contact {
         font-size: 16px;
         height: 200;
