--- a/src/style.css
+++ b/src/style.css
@@ -9,9 +9,12 @@ body {
     height: 80px;
     color: white;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
-    padding: 0px 36px;
+    position: fixed;
+    width: 100%;
+    gap: 50%;
+    top: 0;
 }
 
 .headerList {
@@ -30,11 +33,11 @@ body {
 }
 
 .main {
-    min-height: 83%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-top: 100px;
 }
 
 .active {
@@ -57,7 +60,8 @@ body {
     font-size: 80px;
     font-weight: 900;
 }
-.home button{
+
+.home button {
     color: white;
     background-color: rgb(255, 102, 0);
     border: none;
@@ -66,10 +70,37 @@ body {
     height: 50px;
     font-size: 24px;
 }
+
 .menu {
+    padding: 100px 0 100px 0;
+    width: 500px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
 
-    font-size: large;
+}
 
+.food {
+    display: flex;
+    justify-content: center;
+    align-items: space-between;
+    flex-direction: column;
+    color: rgb(255, 102, 0);
+    border-bottom: 5px solid orange;
+    padding: 50px 0 50px 0;
+    font-size: 24px;
+    gap: 20px;
+}
+
+.foodHeader {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.foodBody {
+    font-size: 18px;
 }
 
 .contact {
@@ -77,16 +108,15 @@ body {
     width: 600px;
     height: 280px;
     border-radius: 20px;
-    /* border: solid 5px rgb(255, 102, 0); */
     color: rgb(255, 102, 0);
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
-.contact p{
+
+.contact p {
     margin: 5px;
 }
-
 
 .footer {
     background-color: rgb(255, 102, 0);
@@ -118,6 +148,12 @@ body {
         height: 150px;
         padding: 10px 0px;
         width: 100%;
+        gap: 0;
+
+    }
+
+    .main {
+        margin-top: 200px;
     }
 
     .headerList {
@@ -138,11 +174,15 @@ body {
         width: 250px;
         font-size: 30px;
     }
+
     .contact {
         font-size: 16px;
         height: 200;
         width: 300px;
     }
 
+    .menu {
+        width: 300px;
+    }
 
 }
